--- a/COVID_19_Detection.ipynb
+++ b/COVID_19_Detection.ipynb
@@ -185,7 +185,7 @@
         ")\n",
         "\n",
         "test_data= test_datagen.flow_from_directory(\n",
-        "    directory= '/content/drive/MyDrive/Covid19/test',\n",
+        "    directory= 'path_to_test_dataset',\n",
         "    target_size=(256,256),\n",
         "    batch_size=32,\n",
         "    class_mode='binary'\n",
@@ -524,7 +524,7 @@
     {
       "cell_type": "code",
       "source": [
-        "path=\"/content/drive/MyDrive/Covid19/test/COVID19/COVID19(461).jpg\"\n",
+        "path=\"path_to_random_image\"\n",
         "img=image.load_img(path,target_size=(256,256))\n",
         "\n",
         "img= image.img_to_array(img)/255\n",
@@ -559,7 +559,7 @@
     {
       "cell_type": "code",
       "source": [
-        "path=\"/content/drive/MyDrive/Covid19/test/NORMAL/NORMAL(1275).jpg\"\n",
+        "path=\"path_to_random_image\"\n",
         "img=image.load_img(path,target_size=(256,256))\n",
         "\n",
         "img= image.img_to_array(img)/255\n",
